# tf2-gnn-to-pytorch

./: pyproject.toml
notebooks/: develop.ipynb
pytorch_gnn/: utils.py
pytorch_gnn/layers/: gnn.py  nodes_to_graph_representation.py
pytorch_gnn/models/: mlp.py
