[tool.poetry]
name = "tf2-gnn-to-pytorch"
version = "0.1.0"
description = "Convert tf2-gnn from TensorFlow to PyTorch framework"
authors = ["Loïc <baret.loic.1@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.17.0"
torch = "^2.4.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
